# ngs-mpi-algorithms

./: .gitignore  .gitmodules  README.md  REPORT.md  makefile  run_end_to_end.sh  student.txt
configs/: defconfig.conf  example.conf  largeGraph.conf  largerGraph.conf  small.conf
experiments/: experiment1.sh  experiment2.sh  experiment3.sh
experiments/graphs/: exp1_100nodes.conf  exp1_100nodes.json  exp2_50nodes.conf  exp3_200nodes.conf
experiments/graphs/exp1/: exp1_100nodes.conf  exp1_100nodes_graph.json  exp1_graph.ngs  exp1_graph.ngs.dot  exp1_graph.ngs.perturbed  exp1_graph.ngs.perturbed.dot  exp1_graph.ngs.yaml  raw_ngs_graph.ngs  raw_ngs_graph.ngs.dot  raw_ngs_graph.ngs.perturbed  raw_ngs_graph.ngs.perturbed.dot  raw_ngs_graph.ngs.yaml
experiments/graphs/exp2/: exp2_50nodes.conf  exp2_50nodes_graph.json  exp2_graph.ngs  exp2_graph.ngs.dot  exp2_graph.ngs.perturbed  exp2_graph.ngs.perturbed.dot  exp2_graph.ngs.yaml  raw_ngs_graph.ngs  raw_ngs_graph.ngs.dot  raw_ngs_graph.ngs.perturbed  raw_ngs_graph.ngs.perturbed.dot  raw_ngs_graph.ngs.yaml
experiments/graphs/exp3/: exp3_200nodes.conf  exp3_200nodes_graph.json  exp3_graph.ngs  exp3_graph.ngs.dot  exp3_graph.ngs.perturbed  exp3_graph.ngs.perturbed.dot  exp3_graph.ngs.yaml  raw_ngs_graph.ngs  raw_ngs_graph.ngs.dot  raw_ngs_graph.ngs.perturbed  raw_ngs_graph.ngs.perturbed.dot  raw_ngs_graph.ngs.yaml
mpi_runtime/: CMakeLists.txt  Makefile  README.md  REPORT.md
mpi_runtime/include/: mpi_utils.h
mpi_runtime/src/: DistributedAlgorithm.h  DistributedDijkstra.cpp  DistributedDijkstra.h  DistributedLeaderElection.cpp  DistributedLeaderElection.h  GraphData.cpp  GraphData.h  main.cpp
mpi_runtime/tests/: test_dijkstra.cpp  test_leaderelection.cpp  test_main.cpp
mpi_runtime/tests/test_graphs/: chain_part.json  simple_part.json  testgraph1.json  testpart1.json
outputs/: exp1_100nodes_part.json  exp2_50nodes.json  exp2_50nodes_part.json  exp3_200nodes.json  exp3_200nodes_part.json  graph.json  part.json  raw_ngs_graph.ngs  raw_ngs_graph.ngs.dot  raw_ngs_graph.ngs.perturbed  raw_ngs_graph.ngs.perturbed.dot  raw_ngs_graph.ngs.yaml  small_graph.json  small_graph.ngs  small_graph.ngs.dot  small_graph.ngs.perturbed  small_graph.ngs.perturbed.dot  small_graph.ngs.yaml  small_part.json
outputs/tests/: chain_graph.json  simple_graph.json
tools/graph_export/: enrichment.py  run.sh
tools/partition/: partition.py  run.sh
